--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -8,9 +8,90 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TakePhotoActivity" >
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/ll_takePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/iv_Photo"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:padding="5dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:onClick="onTakePicture"
+            android:src="@drawable/img_camera" />
+
+        <EditText
+            android:id="@+id/et_title"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="#ccc"
+            android:ems="10"
+            android:hint="@string/hintTitle" >
+
+            <requestFocus />
+        </EditText>
+        
+        <EditText
+            android:id="@+id/et_location"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="#ccc"
+            android:ems="10"
+            android:hint="@string/hintLocation" >
+
+            <requestFocus />
+        </EditText>
+        
+        <EditText
+            android:id="@+id/et_author"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="#ccc"
+            android:ems="10"
+            android:hint="@string/hintAuthor" >
+
+            <requestFocus />
+        </EditText>
+        
+        <EditText
+            android:id="@+id/et_description"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="#ccc"
+            android:ems="10"
+            android:hint="@string/hintDescription" >
+
+            <requestFocus />
+        </EditText>
+        
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_submitPhoto"
+        android:layout_width="200dp"
+        android:background="#D0D"
+        android:textColor="#FFF"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="onSavePOI"
+        android:text="@string/submitPhoto" />
 
 </RelativeLayout>
