--- a/kARTography/res/layout/fragment_map_poi.xml
+++ b/kARTography/res/layout/fragment_map_poi.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
     
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    
+     <!-- <com.google.android.maps.MapView
+        android:id="@+id/mapview" 
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content" 
+        android:clickable="true"
+        android:apiKey="dirkadirka" /> -->
 
-</LinearLayout>
+     <Button
+         android:id="@+id/button1234"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="thing2" />
+
+</RelativeLayout>
