--- a/kARTography/res/values/styles.xml
+++ b/kARTography/res/values/styles.xml
@@ -16,5 +16,16 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="ShadowText">
+    	<item name="android:paddingLeft">4dp</item>
+    	<item name="android:paddingBottom">4dp</item>
+    	<item name="android:textColor">#ffffffff</item>
+    	<item name="android:shadowColor">#000000</item>
+    	<item name="android:shadowDx">2</item>
+    	<item name="android:shadowDy">2</item>
+    	<item name="android:shadowRadius">2</item>
+  	</style>
+        
+    
 
 </resources>
