--- a/kARTography/res/layout/fragment_map_poi.xml
+++ b/kARTography/res/layout/fragment_map_poi.xml
@@ -7,7 +7,7 @@
     
     
       <com.google.android.maps.MapView
-        android:id="@+id/mapview" 
+        android:id="@+id/mapView" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
