--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -41,7 +41,7 @@
             <requestFocus />
         </EditText>
         
-        <EditText
+        <!-- <EditText
             android:id="@+id/et_location"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
 
             <requestFocus />
         </EditText>
-        
+        -->
         <EditText
             android:id="@+id/et_author"
             android:layout_width="250dp"
