--- a/kARTography/res/menu/poi_detail.xml
+++ b/kARTography/res/menu/poi_detail.xml
@@ -5,5 +5,17 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/edit_detailed"
+        android:icon="@drawable/ic_edit"
+        android:onClick="onEditDetails"
+        android:showAsAction="always"
+        android:title="EditDetail"/>
+    <item
+        android:id="@+id/flag_photo"
+        android:icon="@drawable/ic_flag"
+        android:onClick="onFlagPoi"
+        android:showAsAction="ifRoom"
+        android:title="Flag"/>
 
 </menu>
