add next buttons to ET and remove red markers

--- a/kARTography/res/layout/activity_sign_in.xml
+++ b/kARTography/res/layout/activity_sign_in.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:imeOptions="actionNext"
+		android:singleLine="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="118dp"
@@ -27,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/etUsername"
+        android:singleLine="true"
         android:layout_alignRight="@+id/etUsername"
         android:layout_below="@+id/etUsername"
         android:ems="10"
