--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -8,7 +8,7 @@
     android:layout_height="386dp" >
 	
 	    <ImageView
-	        android:id="@+id/imageView1"
+	        android:id="@+id/ivFullPhoto"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
@@ -21,7 +21,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
-	        android:layout_below="@+id/imageView1"
+	        android:layout_below="@+id/ivFullPhoto"
 	        android:layout_marginLeft="38dp"
 	        android:src="@drawable/ic_map" />
 	
@@ -38,9 +38,9 @@
 	        android:id="@+id/tvTitle"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignTop="@+id/imageView1"
+	        android:layout_alignTop="@+id/ivFullPhoto"
 	        android:layout_marginTop="15dp"
-	        android:layout_toRightOf="@+id/imageView1"
+	        android:layout_toRightOf="@+id/ivFullPhoto"
 	        android:text="Title"
 	        android:textAppearance="?android:attr/textAppearanceMedium"
 	         />
@@ -61,6 +61,7 @@
 	        android:layout_height="200dp"
 	        android:layout_alignParentLeft="true"
 	        android:layout_alignParentTop="true"
+	        android:onClick="onShowFullscreen"
 	        android:src="@drawable/ican" />
 
 	    <TextView
@@ -68,7 +69,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentRight="true"
-	        android:layout_alignTop="@+id/imageView1"
+	        android:layout_alignTop="@+id/ivFullPhoto"
 	        android:layout_marginRight="44dp"
 	        android:text="date uploaded"
 	        android:textAppearance="?android:attr/textAppearanceSmall" />
