--- a/kARTography/res/menu/poi_detail.xml
+++ b/kARTography/res/menu/poi_detail.xml
@@ -1,21 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+  
     <item
         android:id="@+id/edit_detailed"
         android:icon="@drawable/ic_edit"
         android:onClick="onEditDetails"
         android:showAsAction="always"
         android:title="EditDetail"/>
+    
+    <item
+        android:id="@+id/share_detailed"
+        android:icon="@drawable/ic_share"
+        android:onClick="onShareDetails"
+        android:showAsAction="always"
+        android:title="EditDetail"/>
     <item
         android:id="@+id/flag_photo"
         android:icon="@drawable/ic_flag"
         android:onClick="onFlagPoi"
-        android:showAsAction="ifRoom"
+        android:showAsAction="never"
         android:title="Flag"/>
 
 </menu>
