Gradient overlay for photo list fragment

--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:onClick="onShowFullscreen"
+        android:background="@drawable/black_bottom_gradient"
         android:src="@drawable/ican" />
 
     <ScrollView
