--- a/kARTography/res/layout/item_list_poi.xml
+++ b/kARTography/res/layout/item_list_poi.xml
@@ -13,6 +13,17 @@
         android:background="@android:color/darker_gray"
         android:scaleType="centerCrop" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/black_bottom_gradient"
+        android:src="@drawable/black_bottom_gradient" />
+
     <TextView
         android:id="@+id/tvAddress"
         android:layout_width="wrap_content"
