--- a/kARTography/res/layout/item_list_poi.xml
+++ b/kARTography/res/layout/item_list_poi.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/tvTitle"
         android:background="@drawable/black_bottom_gradient"
         android:src="@drawable/black_bottom_gradient" />
 
