--- a/kARTography/res/layout/custom_info_window.xml
+++ b/kARTography/res/layout/custom_info_window.xml
@@ -1,8 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    >
 
   <!--   <TextView
         android:id="@+id/tv_info_window_title"
@@ -26,4 +26,4 @@
        android:layout_height="wrap_content"/>
         
 
-</LinearLayout>
+</RelativeLayout>
