--- a/kARTography/res/layout/item_list_poi.xml
+++ b/kARTography/res/layout/item_list_poi.xml
@@ -22,7 +22,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/tvTitle"
         android:background="@drawable/black_bottom_gradient"
-        android:src="@drawable/black_bottom_gradient" />
+        android:src="@drawable/black_bottom_gradient" 
+		/>
 
     <TextView
         android:id="@+id/tvAddress"
