--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -44,21 +44,25 @@
                     android:layout_marginRight="2dp"
                     android:background="@drawable/layout_border">
 
+
                     <ImageView
                         android:id="@+id/ivUploader"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
                         android:paddingLeft="10dp"
+
                         android:src="@drawable/ic_user_mini" />
 
                     <TextView
-                        android:id="@+id/tvUploader"
+                        android:id="@+id/tvUploaderHeader"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/ivUploader"
+                        android:layout_alignTop="@+id/ivUploader"
                         android:layout_toRightOf="@+id/ivUploader"
+
                         android:layout_centerVertical="true"
                         android:paddingLeft="8dp"
                         android:textSize="14sp"
@@ -75,6 +79,7 @@
                         android:textStyle="italic"
                         android:text="@string/uploadDate" />
 
+
                     <TextView
                         android:id="@+id/tvDateText"
                         android:layout_width="wrap_content"
@@ -85,6 +90,7 @@
                         android:text="sadf"
                         android:textSize="14sp" />
 
+                    
                 </RelativeLayout>
 
                 <LinearLayout
@@ -156,6 +162,7 @@
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
                             android:paddingLeft="10dp"
+
                             android:src="@drawable/ic_artist" />
 
                     </RelativeLayout>
