--- a/kARTography/res/layout/item_list_poi.xml
+++ b/kARTography/res/layout/item_list_poi.xml
@@ -4,7 +4,7 @@
     android:layout_height="200dp"
     android:layout_alignParentTop="true"
     >
-
+    
     <ImageView
         android:id="@+id/ivThumbnail"
         android:layout_width="match_parent"
@@ -12,7 +12,6 @@
         android:layout_weight="0.64"
         android:background="@android:color/darker_gray"
         android:scaleType="centerCrop" />
-
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
@@ -55,5 +54,15 @@
         android:layout_alignParentRight="true"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+   <!--  <ImageView
+        android:id="@+id/ivMarkerIcon"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignTop="@+id/tvDistance"
+ 		android:layout_marginRight="5dp"
+        android:layout_toLeftOf="@+id/tvDistance"
+        android:background="@drawable/ic_marker_white"
+        android:src="@drawable/ic_marker_white" /> -->
 
 </RelativeLayout>
