--- a/kARTography/res/menu/main.xml
+++ b/kARTography/res/menu/main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/action_add"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:icon="@drawable/ic_action_add"
+        android:icon="@drawable/ic_action_add_green"
         android:onClick="addNewArt"
         android:title=""/>
 
