--- a/kARTography/res/values/styles.xml
+++ b/kARTography/res/values/styles.xml
@@ -11,7 +11,7 @@
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.		<item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Example</item>
         -->
-        
+        <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Kartography</item>
     </style>
 
     <!-- Application theme. -->
@@ -30,6 +30,10 @@
         <item name="android:shadowRadius">2</item>
     </style>
     
+    <style name="ActionBarTabStyle.Kartography" parent="@android:style/Widget.Holo.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_kartography</item>
+    </style>
+    
     <style name="micro_font">
         <item name="android:textSize">12sp</item>
     </style>
@@ -46,10 +50,7 @@
         <item name="android:textSize">22sp</item>
     </style>
 
-<!--     <style name="ActionBarTabStyle.Example" parent="@android:style/Widget.Holo.Light">
-        <item name="android:background">@drawable/tab_indicator_ab_example</item>
-    </style>
-     -->
+
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@null</item>
