--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -2,204 +2,165 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#efefef"
-     >
+    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/ivArt"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:onClick="onShowFullscreen"
         android:layout_marginBottom="2dp"
+        android:onClick="onShowFullscreen"
         android:src="@drawable/ican" />
-        
-        <!--  android:maxHeight="330dp"
-        android:layout_height="wrap_content"-->
-        
+
+    <!--
+        android:maxHeight="330dp"
+        android:layout_height="wrap_content"
+    -->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
-           
+            <TextView
+                android:id="@+id/tvUploaderHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="@string/uploader"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tvDateText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="8dp"
+                android:text="@string/uploadDate"
+                android:textSize="12sp"
+                android:textStyle="italic" />
+
             <LinearLayout
-                android:id="@+id/linearLayout1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginTop="20dp"
+                android:gravity="center_horizontal"
                 android:orientation="vertical" >
 
+                <TextView
+                    android:id="@+id/tvPhotoTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/title_photo"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
                 <RelativeLayout
-                    android:id="@+id/rlUpload"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp" 
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
-                    android:background="@drawable/layout_border">
-
-
-                    <ImageView
-                        android:id="@+id/ivUploader"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:paddingLeft="10dp"
-
-                        android:src="@drawable/ic_user_mini" />
-
-                    <TextView
-                        android:id="@+id/tvUploaderHeader"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/ivUploader"
-                        android:layout_toRightOf="@+id/ivUploader"
-
-                        android:layout_centerVertical="true"
-                        android:paddingLeft="8dp"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:text="@string/uploader" />
-
-                    <TextView
-                        android:id="@+id/tvDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignRight="@+id/tvDateText"
-                        android:paddingTop="3dp"
-                        android:textSize="12sp"
-                        android:textStyle="italic"
-                        android:text="@string/uploadDate" />
-
-
-                    <TextView
-                        android:id="@+id/tvDateText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_below="@+id/tvDate"
-                        android:layout_marginRight="21dp"
-                        android:text="sadf"
-                        android:textSize="14sp" />
-
-                    
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:id="@+id/llLocAndArtist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
-                    android:orientation="horizontal" >
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="#ffffff"
+                    android:padding="4dp"
+                    android:paddingBottom="4dp" >
 
-                    <RelativeLayout
-                        android:id="@+id/rl_loc"
-                        android:layout_width="0dip"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/layout_border"
-                        android:layout_weight=".5" 
-                        android:paddingTop="6dp">
-
-                        <ImageView
-                            android:id="@+id/ivPin"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerVertical="true"
-                            android:paddingTop="6dp"
-                            android:paddingLeft="10dp"
-                            android:src="@drawable/ic_location_mini" />
-
-                        <TextView
-                            android:id="@+id/tvDistance"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_toRightOf="@+id/ivPin"
-                            android:textSize="14sp"
-                            android:paddingLeft="8dp"
-                            android:layout_centerVertical="true"
-                            android:ellipsize="end"
-                            android:textStyle="bold"
-                            android:text="This is where the magic happens" />
-
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:id="@+id/rl_artist"
-                        android:layout_width="0dip"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/layout_border"
-                        android:layout_weight=".5"
-                        android:paddingTop="6dp" >
-
-                        <TextView
-                            android:id="@+id/tvArtist"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toRightOf="@+id/iv_draw"
-                            android:textSize="14sp"
-                            android:paddingLeft="8dp"
-                            android:textStyle="bold"
-                            android:text="@string/artist" />
-
-                        <ImageView
-                            android:id="@+id/iv_draw"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentTop="true"
-                            android:paddingLeft="10dp"
-
-                            android:src="@drawable/ic_artist" />
-
-                    </RelativeLayout>
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" 
-                    android:background="@drawable/layout_border"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="10dp">
-
-                    <TextView
-                        android:id="@+id/tvDecriptionHeader"
+                    <ImageView
+                        android:id="@+id/imageView1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_pin_mini_green" />
+
+                    <TextView
+                        android:id="@+id/tvLocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/imageView1"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@+id/imageView1"
+                        android:text="@string/location"
+                        android:textSize="14sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="#ffffff"
+                    android:padding="4dp"
+                    android:paddingBottom="4dp" >
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_person_mini_green" />
+
+                    <TextView
+                        android:id="@+id/tvArtist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/imageView2"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@+id/imageView2"
+                        android:text="@string/artist"
+                        android:textSize="14sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="#0dcb00"
+                    android:padding="4dp"
+                    android:paddingBottom="4dp" >
+
+                    <TextView
+                        android:id="@+id/tvDescriptionHeader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:text="@string/description" />
+                        android:layout_centerHorizontal="false"
+                        android:text="@string/description"
+                        android:textColor="#fff"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="#fff"
+                    android:padding="4dp"
+                    android:paddingBottom="4dp" >
 
                     <TextView
                         android:id="@+id/tvDescriptionText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_below="@+id/tvDecriptionHeader"
-                        android:layout_marginLeft="24dp"
-                        android:textSize="14sp"
-                        android:text="TextView" />
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="false"
+                        android:text="TextView"
+                        android:textSize="14sp" />
                 </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
