--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/ivArt"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="256dp"
         android:layout_marginBottom="2dp"
         android:onClick="onShowFullscreen"
         android:src="@drawable/ican" />
@@ -77,10 +77,9 @@
 
                     <ImageView
                         android:id="@+id/imageView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
                         android:src="@drawable/ic_pin_mini_green" />
 
                     <TextView
@@ -106,8 +105,8 @@
 
                     <ImageView
                         android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_person_mini_green" />
